--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "homepage": "http://github.com/solid/node-solid-server",
   "bugs": "http://github.com/solid/node-solid-server/issues",
   "dependencies": {
-    "anvil-connect-express": "^0.3.2",
     "async": "^1.3.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.14.2",
     "busboy": "^0.2.12",
     "camelize": "^1.0.0",
@@ -49,6 +49,7 @@
     "ip-range-check": "0.0.1",
     "is-ip": "^1.0.0",
     "jsonld": "^0.4.5",
+    "kvplus-files": "0.0.3",
     "li": "^1.0.1",
     "mime-types": "^2.1.11",
     "moment": "^2.13.0",
@@ -56,11 +57,15 @@
     "node-forge": "^0.6.38",
     "nodemailer": "^2.3.2",
     "nomnom": "^1.8.1",
-    "rdflib": "^0.12.3",
+    "oidc-op": "git://github.com/anvilresearch/oidc-op.git#lib",
+    "oidc-op-express": "^0.0.2",
+    "oidc-rs": "git://github.com/anvilresearch/oidc-rs.git#lib",
+    "rdflib": "^0.12.1",
     "request": "^2.72.0",
     "rimraf": "^2.5.0",
     "run-waterfall": "^1.1.3",
     "serve-favicon": "^2.3.2",
+    "solid-multi-rp-client": "git://github.com/solid/solid-multi-rp-client.git",
     "solid-namespace": "^0.1.0",
     "solid-permissions": "^0.4.0",
     "solid-ws": "^0.2.2",
